add some styling and make the home link point to the correct place

--- a/play.html
+++ b/play.html
@@ -18,7 +18,7 @@
             <button id="playNow">Try It!</button>
         </div>
 
-        <a href="Home.html">Home</a>
+        <a href="index.html">Home</a>
 
         <div class="fizzBuzz">
         </div>
