--- a/no.html
+++ b/no.html
@@ -18,7 +18,7 @@
          <div class="buttons">
             <button id="noPageButton">Got It</button>
          </div>
-         <a href="Home.html">Home</a>
+         <a href="index.html">Home</a>
     </body>
     <script src="CodeSample.js"></script>
     <script>theBuzz("fizz", "buzz")</script>
