change some styling and add autofocus to the form

--- a/play.html
+++ b/play.html
@@ -10,7 +10,7 @@
         <h3>Although I really like the string "FizzBuzz", I thought it might be time to try something new.</h3>
 
         <form>
-            Give me a fun word or sound: <input id="newFizz" type="text"><br/>
+            Give me a fun word or sound: <input id="newFizz" type="text" autofocus><br/>
             And another interesting word or sound: <input id="newBuzz" type="text">
         </form>
 
